Fixing layout on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ body {
   scroll-behavior: smooth;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 /*============= Nav =============*/
 
 .nav-bg {
